--- a/.github/workflows/packaging-openwrt.yml
+++ b/.github/workflows/packaging-openwrt.yml
@@ -13,70 +13,28 @@ on:
       openwrt_soc:
         description: "Select device board."
         required: false
-        default: "all"
+        default: "e25"
         type: choice
         options:
-          - all
-          - s922x_s905x3_s905x2_s912_s905d_s905
-          - ak88
-          - beikeyun
-          - cm3
           - e25
-          - e52c
-          - ht2
-          - e20c
-          - h28k
-          - h66k
-          - h68k
-          - h69k
-          - h69k-max
-          - h88k
-          - h88k-v3
-          - l1pro
-          - photonicat
-          - qemu
-          - r66s
-          - r68s
-          - jp-tvbox
-          - watermelon-pi
-          - rock5b
-          - rock5c
-          - rk3399
-          - s905
-          - s905d
-          - s905x2
-          - s905x3
-          - s912
-          - s922x
-          - s922x-n2
-          - vplus
-          - zcube1-max
-          - diy
       customize_rk3399:
         description: "Set customize rk3399 devices"
         required: false
-        default: "tvi3315a:rk3399-tvi3315a.dtb/sw799:rk3399-bozz-sw799.dtb"
+        default: ""
       openwrt_kernel:
         description: "Select kernel version"
         required: false
         default: "6.1.y_6.6.y"
         type: choice
         options:
-          - 5.4.y
-          - 5.10.y
-          - 5.15.y
-          - 6.1.y
-          - 6.6.y
           - 6.1.y_6.6.y
-          - 5.15.y_5.10.y
       kernel_repo:
         description: "Set the kernel repository"
         required: false
-        default: "ophub/kernel"
+        default: "noeusa/kernel"
         type: choice
         options:
-          - ophub/kernel
-          - breakings/OpenWrt
+          - noeusa/kernel
       auto_kernel:
         description: "Auto use the latest kernel"
         required: false
