--- a/.github/workflows/packaging-openwrt.yml
+++ b/.github/workflows/packaging-openwrt.yml
@@ -165,7 +165,7 @@ jobs:
         env:
           OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*rootfs.tar.gz
           SELECT_PACKITPATH: openwrt_packit
-          PACKAGE_SOC: ${{ inputs.openwrt_soc }}
+          PACKAGE_SOC: e25
           KERNEL_REPO_URL: ${{ inputs.kernel_repo }}
           KERNEL_VERSION_NAME: ${{ inputs.openwrt_kernel }}
           KERNEL_AUTO_LATEST: ${{ inputs.auto_kernel }}
